# codex

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  codeql-analysis.yml  ubuntu.yml
include/node/: api.h  line.hpp  node.hpp  node_manager.hpp  port.hpp  property.hpp  utils.hpp
include/utils/: dll_helper.hpp  image_utils.hpp  utils.hpp
include/widgets/: canvas.h  line_item.h  main_window.h  scene.h
scripts/: copy_dep.sh
src/: CMakeLists.txt
src/widgets/: canvas.cpp  line_item.cpp  main_window.cpp  scene.cpp
test/: CMakeLists.txt  test_utils.cpp
tests/: CMakeLists.txt  test_cv.cpp
tests/test_node/: CMakeLists.txt  test_node.cpp
