cmake_minimum_required(VERSION 3.5) # cmake最低版本

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
# SET(CMAKE_AUTOUIC ON)
# SET(CMAKE_AUTOMOC ON)
# SET(CMAKE_AUTORCC ON)

# 默认编译debug
IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

# 编译产物标志
IF(CMAKE_BUILD_TYPE MATCHES Debug)
    SET(BUILD_FLAG d)
ELSE()
    SET(BUILD_FLAG "")
ENDIF()

# 编译产物后缀
IF(CMAKE_SYSTEM_NAME MATCHES Linux)
    SET(LIB_SUFFIX .so)
    SET(BIN_SUFFIX .so)
ELSE()
    SET(LIB_SUFFIX .lib)
    SET(BIN_SUFFIX .dll)
ENDIF()

# 编译路径
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY build)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY build/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY build/lib)
set(ROOT ${PROJECT_SOURCE_DIR})

# 三方库
SET(THIRDPARTY_DIR ${PROJECT_SOURCE_DIR}/thirdparty)
SET(OpenCV_DIR ${THIRDPARTY_DIR}/opencv2)
FILE(GLOB_RECURSE OpenCV ${OpenCV_DIR}/*${LIB_SUFFIX}*)

add_subdirectory(${PROJECT_SOURCE_DIR}/tests)