cmake_minimum_required(VERSION 3.5) # cmake最低版本

SET(PROJECT_NAME codex)
project(${PROJECT_NAME} VERSION 0.0.1)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_AUTOUIC ON)
SET(CMAKE_AUTOMOC ON)
SET(CMAKE_AUTORCC ON)

# 默认编译debug
IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

# 编译产物标志
IF(CMAKE_BUILD_TYPE MATCHES Debug)
    SET(BUILD_FLAG d)
ELSE()
    SET(BUILD_FLAG "")
ENDIF()

# 编译产物后缀
IF(CMAKE_SYSTEM_NAME MATCHES Linux)
    SET(LIB_SUFFIX .so)
    SET(BIN_SUFFIX .so)
ELSE()
    SET(LIB_SUFFIX ${BUILD_FLAG}.lib)
    SET(BIN_SUFFIX ${BUILD_FLAG}.dll)
ENDIF()

# 编译路径
set(ROOT ${PROJECT_SOURCE_DIR})

# # 为Debug和Release配置分别设置可执行文件的输出目录
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/build/bin/debug)
# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/build/bin/release)
    
# # 为Debug和Release配置分别设置库文件的输出目录
# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/build/lib/debug)
# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/build/lib/release)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/bin)
# 为Debug和Release配置分别设置库文件的输出目录
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/lib)

# 三方库
SET(THIRDPARTY_DIR ${PROJECT_SOURCE_DIR}/thirdparty)
SET(OpenCV_DIR ${THIRDPARTY_DIR}/opencv2)
FILE(GLOB_RECURSE OpenCV ${OpenCV_DIR}/*${LIB_SUFFIX}*)

add_subdirectory(${PROJECT_SOURCE_DIR}/tests)
add_subdirectory(${PROJECT_SOURCE_DIR}/src)